binderhub-service/templates/builder-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: binder-builder-network-policy
spec:
  podSelector:
    matchLabels:
      component: binderhub-build
  policyTypes:
    - Egress
  egress:
    # Allow access to everything except private IPs
    - to:
        - ipBlock:
            cidr: 0.0.0.0/0
            except:
              - 10.0.0.0/8
              - 172.16.0.0/12
              - 192.168.0.0/16
    # Allow access to DNS
    - ports:
        - port: 53
          protocol: UDP
        - port: 53
          protocol: TCP
      to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
          podSelector:
            matchLabels:
              # This label is also added to EKS core-dns deployments
              k8s-app: kube-dns
